# loja_virtual

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: quality.yml  tests.yml
carrinho/: cart.py  tests.py  urls.py  views.py
carrinho/templates/carrinho/: detalhe.html
config/: settings.py  urls.py
docs/: DOCE_UNIVERSO_FASE_1.md
pedidos/: admin.py  models.py  tests.py  urls.py  views.py
pedidos/migrations/: 0001_initial.py
pedidos/templates/pedidos/: confirmar.html  lista.html  sucesso.html
produtos/: admin.py  models.py  tests.py  urls.py  views.py
produtos/migrations/: 0001_initial.py  0002_categoria_alter_produto_options_produto_categoria.py  0003_alter_produto_categoria.py
produtos/templates/produtos/: detalhes.html  lista.html
usuarios/: admin.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
usuarios/migrations/: 0001_initial.py
usuarios/templates/usuarios/: cadastrar.html  login.html  perfil.html
