[project]
name = "loja-virtual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.65",
    "django>=6.0.3",
    "django-storages>=1.14.6",
    "django-unfold>=0.83.1",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.ruff]
# Exclui arquivos gerados ou desnecessários
exclude = [
    "*/migrations/*.py",
    "manage.py",
    "config/wsgi.py",
    "config/asgi.py",
    "__pycache__",
    ".venv",
    ".git",
]

[tool.ruff.lint]
# Ignora regras específicas em arquivos específicos se necessário
ignore = ["E402", "F401"] # Exemplo: erros de importação fora do topo em alguns arquivos
